# preciouss

./: .gitignore  CLAUDE.md  README.md  config.example.toml  pyproject.toml
.github/codex/prompts/: autofix-p0p1.md  review-p0p1.md
.github/codex/schemas/: review-findings.schema.json
.github/workflows/: codex-pr-review-autofix.yml
src/preciouss/: __init__.py  cli.py
src/preciouss/categorize/: apply.py  bql.py  overrides.py  rules.py  taxonomy.py
src/preciouss/config/: __init__.py  schema.py
src/preciouss/importers/: __init__.py  aldi.py  alipay.py  base.py  citic.py  clearing.py  cmb.py  costco.py  jd.py  resolve.py  wechat.py  wechathk.py
src/preciouss/ledger/: accounts.py  writer.py
src/preciouss/matching/: clearing.py  engine.py  rules.py
tests/: test_aldi.py  test_alipay.py  test_apply_overrides.py  test_bql.py  test_categorize.py  test_citic.py  test_clearing_links.py  test_cli.py  test_cmb.py  test_config.py  test_costco.py  test_cross_platform.py  test_dedup.py  test_jd.py  test_matching.py  test_overrides.py  test_resolve.py  test_wechat.py  test_wechathk.py  test_writer.py
tests/fixtures/: aldi_sample.json  alipay_sample.csv  cmb_credit_sample.csv  cmb_debit_sample.csv  costco_sample.json  jd_orders_sample.json  jd_sample.csv  wechat_sample.csv  wechat_sample.xlsx  wechathk_sample.json
